@@ -1,7 +1,9 @@
 11/17/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.5.0.4 'dan Eider':
 	- hiredis and mongo compilation configuration fixed
-	(fix provided by Harsha Bellur). 
+	(fix provided by Harsha Bellur).
+	- RPM: Systemd optimization.
+	- REST API option fixed.
 
 11/15/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.5.0.3 'dan Eider':
